--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,10 +20,8 @@
   booktitle={International Conference on Advances in Social Networks Analysis and Mining},
   pages={226--242},
   year={2024},
-  organization={Springer},
-  selected={true}
+  organization={Springer}
 }
-
 
 @inproceedings{edman-etal-2024-babylms,
     title = "Are {B}aby{LM}s Second Language Learners?",
@@ -36,3 +34,27 @@
     publisher = "Association for Computational Linguistics",
     pages = "166--173"
 }
+
+@inproceedings{Ghorbanpour2025Fine,
+    title = "Fine-Grained Transfer Learning for Harmful Content Detection through Label-Specific Soft Prompt Tuning",
+    author = "Ghorbanpour, Faeze  and
+      Hangya, Viktor  and
+      Fraser, Alexander",
+    booktitle = "NAACL",
+    year = "2025",
+    publisher = "Association for Computational Linguistics",
+  selected={true}
+}
+
+
+@inproceedings{Ghorbanpour2025Differentiating,
+    title = "Differentiating Emigration from Return Migration of Scholars Using Name-Based Nationality Detection Models",
+    author = "Ghorbanpour, Faeze  and
+      Malaguth, Thiago Z.  and
+      Akbaritabar, Aliakbar",
+    booktitle = "ICWSM",
+    year = "2025",
+    publisher = "AAAI",
+  selected={true}
+}
+
