some changes in _config.yml

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,33 @@
 ---
 ---
 
+@inproceedings{Ghorbanpour2025Fine,
+  bibtex_show={false},
+    title = "Fine-Grained Transfer Learning for Harmful Content Detection through Label-Specific Soft Prompt Tuning",
+    author = "Ghorbanpour, Faeze  and
+      Hangya, Viktor  and
+      Fraser, Alexander",
+    booktitle = "NAACL",
+    year = "2025",
+    publisher = "Association for Computational Linguistics",
+  selected={true}
+}
+
+
+@inproceedings{Ghorbanpour2025Differentiating,
+  bibtex_show={false},
+    title = "Differentiating Emigration from Return Migration of Scholars Using Name-Based Nationality Detection Models",
+    author = "Ghorbanpour, Faeze  and
+      Malaguth, Thiago Z.  and
+      Akbaritabar, Aliakbar",
+    booktitle = "ICWSM",
+    year = "2025",
+    publisher = "AAAI",
+  selected={true}
+}
+
+
+
 @article{ghorbanpour2023fnr,
   bibtex_show={false},
   title={FNR: A Similarity and Transformer-Based Approach to Detect Multi-Modal Fake News in Social Media},
@@ -15,6 +42,7 @@
 }
 
 @inproceedings{paakki2024computational,
+  bibtex_show={false},
   title={Computational Analysis of Communicative Acts for Understanding Crisis News Comment Discourses},
   author={Paakki, Henna and Ghorbanpour, Faeze},
   booktitle={International Conference on Advances in Social Networks Analysis and Mining},
@@ -24,6 +52,7 @@
 }
 
 @inproceedings{edman-etal-2024-babylms,
+  bibtex_show={false},
     title = "Are {B}aby{LM}s Second Language Learners?",
     author = "Edman, Lukas  and
       Bylinina, Lisa  and
@@ -33,28 +62,5 @@
     year = "2024",
     publisher = "Association for Computational Linguistics",
     pages = "166--173"
-}
-
-@inproceedings{Ghorbanpour2025Fine,
-    title = "Fine-Grained Transfer Learning for Harmful Content Detection through Label-Specific Soft Prompt Tuning",
-    author = "Ghorbanpour, Faeze  and
-      Hangya, Viktor  and
-      Fraser, Alexander",
-    booktitle = "NAACL",
-    year = "2025",
-    publisher = "Association for Computational Linguistics",
-  selected={true}
-}
-
-
-@inproceedings{Ghorbanpour2025Differentiating,
-    title = "Differentiating Emigration from Return Migration of Scholars Using Name-Based Nationality Detection Models",
-    author = "Ghorbanpour, Faeze  and
-      Malaguth, Thiago Z.  and
-      Akbaritabar, Aliakbar",
-    booktitle = "ICWSM",
-    year = "2025",
-    publisher = "AAAI",
-  selected={true}
 }
 
