changes in bib and resume

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,7 @@
   bibtex_show={false},
   title={Computational Analysis of Communicative Acts for Understanding Crisis News Comment Discourses},
   author={Paakki, Henna and Ghorbanpour, Faeze},
-  booktitle={International Conference on Advances in Social Networks Analysis and Mining},
+  booktitle={ASONAM},
   pages={226--242},
   year={2024},
   organization={Springer}
@@ -58,7 +58,7 @@
       Bylinina, Lisa  and
       Ghorbanpour, Faeze  and
       Fraser, Alexander",
-    booktitle = "The 2nd BabyLM Challenge at the 28th Conference on Computational Natural Language Learning",
+    booktitle = "The BabyLM Challenge, CONLL",
     year = "2024",
     publisher = "Association for Computational Linguistics",
     pages = "166--173"
